<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewContactActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarNewContact"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/title_new_contact"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/foto_01" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name_contact"
        android:layout_margin="8dp"
        android:inputType="text"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_last_name_contact"
        android:layout_margin="8dp"
        android:inputType="text"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone_contact"
        android:layout_margin="8dp"
        android:inputType="phone"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email_contact"
        android:layout_margin="8dp"
        android:inputType="textEmailAddress"
        />

</LinearLayout>